<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RealTrack</string>
    <string name="allprojectsactivity_label">All Projects</string>
    <string name="addprojectactivity_label">Add Project</string>
    <string name="displayprojectactivity_label">Project Details</string>
    <string name="editprojectactivity_label">Edit Project</string>
    <string name="allactivitiesactivity_label">All Activities</string>
    <string name="addactivitiesactivity_label">Add Activity</string>
    <string name="displayactivitiesactivity_label">Activity Details</string>
    <string name="editactivitiesactivity_label">Edit Activity</string>
    <string name="recordparticipationactivity_label">Record Participation</string>
    <string name="editparticipationactivity_label">Edit Participation</string>
    <string name="recordquickparticipationactivity_label">Record Event Participation</string>
    <string name="pendingparticipationactivity_label">Pending Participations</string>
    <string name="allparticipationsactivity_label">Participation Details</string>
    <string name="emptyfieldserrormessage">"All non&#8211;optional fields are required"</string>
    <string name="fillrequiredfieldserrormessage">"Please provide all required fields"</string>
    <string name="emptyparticipationmessage">"Please enter the number of participants"</string>
    <string name="helpactivity_label">HelpActivity</string>
    <string name="action_settings">Settings</string>
    <string name="signinsheetlandingactivity_label">Sign&#8211;In Sheet</string>
    <string name="passDeviceToNextParticipant">Please pass the device to the next participant</string>
    <string name="ok">&#xf0a4; OK</string>
    <string name="noMoreParticipants">All participants done\nPlease return device to Peace Corps Volunteer</string>
    <string name="reviewParticipants">Review participants</string>
    <string name="openSigninSheetButtonLabel">&#xf090; Open Sign&#8211;In Sheet</string>
    <string name="done">&#xf00c; Done</string>
    <string name="review">&#xf022; Review</string>
    <string name="signinsheetactivity_label">Please Sign In</string>
    <string name="name">Name</string>
    <string name="namehint">Your Name (required)</string>
    <string name="pleasesignin">Welcome.\nPlease Sign In</string>
    <string name="phone">Phone</string>
    <string name="phonehint">Phone No. (optional)</string>
    <string name="village">Village</string>
    <string name="villagehint">Village Name (optional)</string>
    <string name="age">Age</string>
    <string name="agehint">Age (required)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">&#xf00c; Save</string>
    <string name="adddetails">&#xf133; Add Details</string>
    <string name="only_save">Save</string>
    <string name="only_cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="dateformathint">MM/DD/YYYY</string>
    <string name="startdateformathint">Start Date (MM/DD/YYYY)</string>
    <string name="enddateformathint">End Date (MM/DD/YYYY)</string>
    <string name="eventdateformathint">Enter Date (MM/DD/YYYY)</string>
    <string name="time">Time</string>
    <string name="timeformathint">HH:MM AM/PM</string>
    <string name="eventtimeformathint">Enter Time (HH:MM AM/PM)</string>
    <string name="participation">Participation</string>
    <string name="men">Individuals (Men)</string>
    <string name="spmen">Service Providers (Men)</string>
    <string name="men09">0&#8211;9</string>
    <string name="men1017">10&#8211;17</string>
    <string name="men1824">18&#8211;24</string>
    <string name="menover25">Over 25</string>
    <string name="numberofmen">No. of Men</string>
    <string name="numberofmen09">Age 0&#8211;9</string>
    <string name="numberofmen1017">Age 10&#8211;17</string>
    <string name="numberofmen1824">Age 18&#8211;24</string>
    <string name="numberofmenover25">Age over 24</string>
    <string name="women">Individuals (Women)</string>
    <string name="numberofwomen09">Age 0&#8211;9</string>
    <string name="numberofwomen1017">Age 10&#8211;17</string>
    <string name="numberofwomen1824">Age 18&#8211;24</string>
    <string name="numberofwomenover25">Age over 24</string>
    <string name="spwomen">Service Providers (Women)</string>
    <string name="women09">0&#8211;9</string>
    <string name="women1017">10&#8211;17</string>
    <string name="women1824">18&#8211;24</string>
    <string name="womenover25">Over 25</string>
    <string name="numberofwomen">No. of Women</string>
    <string name="entereventdetails">Enter event details</string>
    <string name="nameactivityhint">Name Your Activity</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="monday">Mondays</string>
    <string name="tuesday">Tuesdays</string>
    <string name="wednesday">Wednesdays</string>
    <string name="thursday">Thursdays</string>
    <string name="friday">Fridays</string>
    <string name="saturday">Saturdays</string>
    <string name="sunday">Sundays</string>
    <string name="notes">Notes</string>
    <string name="cohort">Reporting Cohort</string>
    <string name="enternotes">Enter Notes</string>
    <string name="entercohort">Enter Reporting Cohort</string>
    <string name="organizationsinvolved">Organizations Involved</string>
    <string name="communitiesimpacted">Communities Impacted</string>
    <string name="csppoptional">Cross&#8211;Sector Programming Priorities</string>
    <string name="genderequalityandwomensempowerment">Gender Equality and Women\'s Empowerment</string>
    <string name="hivaids">HIV/AIDS</string>
    <string name="technologyfordevelopment">Technology for Development</string>
    <string name="youthasresources">Youth as Resources</string>
    <string name="volunteerism">Volunteerism</string>
    <string name="peoplewithdisabilities">People with Disabilities</string>
    <string name="initiativesoptional">Initiatives</string>
    <string name="wid">WID</string>
    <string name="youth">Youth</string>
    <string name="malaria">Malaria</string>
    <string name="foodsecurity">Food Security</string>
    <string name="ecpa">ECPA</string>
    <string name="nameprojecthint">Name Your Project</string>
    <string name="dismiss">&#xf00d; Dismiss</string>
    <string name="close">&#xf00d; Close</string>
    <string name="fa_dansei_jyosei">&#xf183;&#xf182;</string>
    <string name="fa_edit_pencil">&#xf040;</string>
    <string name="fa_trash">&#xf014;</string>
    <string name="fa_rightchevron">&#xf054;</string>
    <string name="fa_rightchevroncircle">&#xf138;</string>
    <string name="fa_downchevron">&#xf078;</string>
    <string name="fa_downchevroncircle">&#xf13a;</string>
    <string name="fa_rightcircledarrow">&#xf0a9;</string>
    <string name="fa_righthand">&#xf0a4;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_calendar">&#xf133;</string>
    <string name="fa_list">&#xf00b;</string>
    <string name="myprojects">&#xf00b; My Projects</string>
    <string name="fa_table">&#xf0ce;</string>
    <string name="mydata">&#xf0ce; My Data</string>
    <string name="fa_plus">&#xf067;</string>
    <string name="fa_pluscircle">&#xf055;</string>
    <string name="reviewsigninactivity_label">Review Participants</string>
    <string name="title_activity_signature">Please Sign</string>
    <string name="clear">&#xf021; Clear</string>
    <string name="pleasesignfirst">Please sign first</string>
    <string name="sign">&#xf044; Sign</string>
    <string name="signagain">&#xf044; Re&#8211;Sign</string>
    <string name="noparticipationstoexport">No participations to export</string>
    <string name="nobluetoothsupport">Your device does not support Bluetooth</string>
    <string name="newrepeating">New Repeating</string>
    <string name="activityellipses">Activity&#8230;</string>
    <string name="addanewproject">Add a new project&#8230;</string>
    <string name="addyourprimaryproject">Add your primary project&#8230;</string>
    <string name="addasecondaryproject">Add a secondary project&#8230;</string>
    <string name="menunder15summary">Men &lt; 15</string>
    <string name="men1524summary">Men 15&#8211;24</string>
    <string name="menover24summary">Men &gt; 24</string>
    <string name="womenunder15summary">Women &lt; 15</string>
    <string name="women1524summary">Women 15&#8211;24</string>
    <string name="womenover24summary">Women &gt; 24</string>
    <string name="emdash">&#8211;</string>
    <string name="cspp">Cross&#8211;Sector Programming Priorities</string>
    <string name="initiatives">Initiatives</string>
    <string name="communities">Communities</string>
    <string name="organizations">Organizations</string>
    <string name="reminders">Reminders</string>
    <string name="pleasesignhere">Please Sign Here</string>
    <string name="collectpcvactivity_label">Welcome</string>
    <string name="hello_world">Hello world!</string>
    <string name="select">Select&#8230;</string>
    <string name="project">Project</string>
    <string name="post">Post</string>
    <string name="welcome">Welcome</string>
    <string name="cannotentersmallernumber">Number entered cannot be less than the number of people currently signed in.</string>
    <string name="frameworkinfoactivity_label">Project Framework</string>
    <string name="howtouse">How to Use</string>
    <string name="help">Help</string>
    <string name="projectframework">Project Framework</string>
    <string name="glossary">Glossary</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="addproject">Add Project</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>
    <string name="peacecorpslogo">Peace Corps Logo</string>
    <string name="nonotes">No notes</string>
    <string name="noreminders">No reminders</string>
    <string name="nocohort">No cohort</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="noorgs">No organizations</string>
    <string name="nocomms">No communities</string>
    <string name="nocspp">No cross&#8211;sector programming priorities</string>
    <string name="noinitiatives">No initiatives</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="email">Email</string>
    <string name="generatingreports">Generating Reports&#8230;</string>
    <string name="sendmail">Send mail&#8230;</string>

</resources>