<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_editactivity"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="always"
        android:title="@string/edit"/>
    <item
        android:id="@+id/action_deleteactivity"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom"
        android:title="@string/delete"/>
    <item
        android:id="@+id/action_helpGroup"
        android:icon="@android:drawable/ic_menu_help"
        android:showAsAction="always"
        android:title="@string/howtouse">
        <menu>
            <item
                android:id="@+id/action_help"
                android:showAsAction="always"
                android:title="@string/howtouse"/>
            <item
                android:id="@+id/action_framework"
                android:showAsAction="always"
                android:title="@string/projectframework"/>
        </menu>
    </item>

</menu>